# lattice

./: .env.eval.example  .gitignore  404.html  ARCHITECTURE.md  ATOM_GRAPH_FEATURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  FEATURES.md  FRONTEND.md  LICENSE  MVP.md  PITCH.md  README.md  ROADMAP.md  STORIES.md  docker-compose.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  server.py  sitemap.xml
backend/: __init__.py  config.py  main.py
docs/: channel-test-workflow.md  index.md  m4-source-feedback-test-workflow.md  memory-depth--test-workflow.md  memory-spark-empty-state-test-workflow.md  story-014-file-ingest-workflow.md  story-031-test-workflow.md  story-033-pii-redaction-workflow.md  story-039-multi-turn-reformulation-workflow.md  story-041-continuous-thread-workflow.md  synthetic_test_data.md  usage-telemetry-test-workflow.md
extras/: dev.lattice.daemon.plist  dev.lattice.telegram.plist
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
lattice/: cli.py  client.py  config.py  conversation.py  daemon.py  db.py  embed.py  graph.py  ingest.py  llm.py  privacy.py  query.py  selection.py  synthesis.py  telegram_bot.py  telemetry.py  trace.py  util.py
scripts/: e2e.py
search/: search_index.json
tests/: conftest.py  helpers.py  test_agents.py  test_citations.py  test_client.py  test_daemon.py  test_daemon_inbox.py  test_daemon_logging.py  test_e2e_mock.py  test_graph.py  test_llm.py  test_llm_anthropic_compat.py  test_query_intent.py  test_selection_intent.py  test_server_s4.py  (+20 more)
tests-workflows/: browser-extension-workflow.md  story-041-continuous-thread-workflow.md  story-041-trace-workflow.md
(+172 files in other folders)
